# xraylib-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml
src/xraylib_mcp_server/: __init__.py  constants.py  server.py
tests/: test_constants.py  test_server.py
