[project]
name = "xraylib-mcp-server"
version = "0.1.2"
description = "Model Context Protocol server for xraylib X-ray interaction data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tom Schoonjans", email = "Tom.Schoonjans@genomics.com" }
]
license = { text = "BSD-3-Clause" }
keywords = ["mcp", "xraylib", "xray", "spectroscopy", "fluorescence", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "xraylib>=4.1.0",
]

[project.scripts]
xraylib-mcp-server = "xraylib_mcp_server.server:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/xraylib_mcp_server --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests requiring xraylib installed (deselect with '-m \"not integration\"')"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
